# twitchzero

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: access_token_template.txt  args.rs  custom_m3u8.rs  downloader.rs  ffplay.rs  gql.rs  isav.rs  main.rs  model.rs  outsender.rs  outwriter.rs  tzerror.rs  utils.rs
src/ui/: mod.rs  ui_iced.rs
