[package]
name = "twitchzero"
version = "0.2.0"
authors = ["7ERr0r"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
uiwindow = ["dep:iced"]

[dependencies]
reqwest = { version = "*", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "*"
rand = "*"
zip = { version = "0.5", default-features = false, features = ["deflate"] }
derive_more = "*"
hex-literal = "*"
clap = { version = "4.1.6", features = ["derive"] }
bytes = "1.4.0"
# hyper = "0.14.24"
anyhow = "1.0.69"
sha3 = "0.10.6"
hex = "0.4.3"


iced = { version = "0.8.0", optional = true }
form_urlencoded = "1.1.0"
url = "2.3.1"


